--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ model {
         buildToolsVersion = "24.0.3" //"22.0.1"
 
         defaultConfig.with {
-            applicationId = "com.philolog.hc"
+            applicationId = "com.philolog.hoplitekeyboard"
             minSdkVersion.apiLevel = 16
             targetSdkVersion.apiLevel = 24
         }
