--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="philolog.com.hoplitekeyboard">
+    package="com.philolog.hoplitekeyboard"
+    android:versionCode="1"
+    android:versionName="1.0.0">
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
