--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.philolog.hoplitekeyboard"
-    android:versionCode="3"
-    android:versionName="1.0.2">
+    android:versionCode="4"
+    android:versionName="1.0.3">
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
@@ -13,7 +13,7 @@
             </intent-filter>
         </activity>
         <service android:name=".HopliteKeyboard"
-            android:label="Hoplite Polytonic Greek Keyboard"
+            android:label="@string/app_name"
             android:permission="android.permission.BIND_INPUT_METHOD">
             <meta-data android:name="android.view.im" android:resource="@xml/method"/>
             <intent-filter>
