--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.model.application'
 model {
     android {
-        compileSdkVersion = 24
+        compileSdkVersion = 25
 
         //To see what is the latest: http://developer.android.com/tools/revisions/build-tools.html
-        buildToolsVersion = "24.0.3" //"22.0.1"
+        buildToolsVersion = "25.0.3" //"22.0.1"
 
         defaultConfig.with {
             applicationId = "com.philolog.hoplitekeyboard"
@@ -19,7 +19,7 @@ model {
         moduleName = "libGreek"
         CFlags.add("-O3")
         CFlags.add("-std=c99")
-        ldLibs.add("log")
+        ldLibs.add("log") //for debugging
         /*
          * Other ndk flags configurable here are
          * cppFlags += "-fno-rtti"
@@ -67,5 +67,5 @@ model {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:support-v4:25.3.1'
 }
