--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle-experimental:0.9.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        //classpath 'com.android.tools.build:gradle-experimental:0.11.0-alpha2'
+        //classpath 'com.android.tools.build:gradle-experimental:0.11.0'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.2'
         //classpath 'com.android.tools.build:gradle:1.12'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +19,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
