--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,8 +87,8 @@ apply plugin: 'com.android.application'
 */
 
         dependencies {
-            compile 'com.android.support:support-v4:27.1.0'
-            compile 'com.android.support:appcompat-v7:27.1.0'
+            implementation 'com.android.support:support-v4:27.1.0'
+            implementation 'com.android.support:appcompat-v7:27.1.0'
         }
 
 // Specifies the location of the top level CMakeLists.txt
