--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
     android {
-        compileSdkVersion = 28
+        compileSdkVersion = 29
 
         //To see what is the latest: http://developer.android.com/tools/revisions/build-tools.html
-        buildToolsVersion = "28.0.3" //"22.0.1"
+        buildToolsVersion = "29.0.3"
 
         defaultConfig {
             applicationId = "com.philolog.hoplitekeyboard"
             minSdkVersion 16
-            targetSdkVersion 28
+            targetSdkVersion 29
 
             ndk {
                 abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64" //, "mips64", "armeabi", "mips"
@@ -101,3 +101,9 @@ apply plugin: 'com.android.application'
             }
         }
     }
+
+allprojects {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    }
+}
