now keyboard colors come from theme; seems to work for embed, not for inputmethodservice

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:label="@string/app_name"
         android:icon="@mipmap/hoplitekblogo"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+        android:theme="@style/HKDayNight"
         android:allowBackup="true">
 
         <activity android:name=".HKMainMenu"
