--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,8 +88,7 @@ apply plugin: 'com.android.application'
 */
 
         dependencies {
-            implementation 'com.android.support:support-v4:28.0.0'
-            implementation 'com.android.support:appcompat-v7:28.0.0'
+            implementation 'androidx.preference:preference:1.1.1'
         }
 
 // Specifies the location of the top level CMakeLists.txt
