--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
     android {
-        compileSdkVersion = 29
+        compileSdkVersion = 30
 
         //To see what is the latest: http://developer.android.com/tools/revisions/build-tools.html
-        buildToolsVersion = "29.0.3"
+        buildToolsVersion = "30.0.2"
 
         defaultConfig {
             applicationId = "com.philolog.hoplitekeyboard"
             minSdkVersion 21
-            targetSdkVersion 29
+            targetSdkVersion 30
 
             ndk {
                 abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64" //, "mips64", "armeabi", "mips"
@@ -49,11 +49,13 @@ apply plugin: 'com.android.application'
         //}
         android.buildTypes {
             release {
-                minifyEnabled = false
-                proguardFiles.add(file('proguard-rules.txt'))
+                minifyEnabled = true
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             }
             debug {
                 debuggable = true
+                minifyEnabled = true
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             }
         }
 
