--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
     android {
-        compileSdkVersion = 30
+        compileSdkVersion 34
 
         //To see what is the latest: http://developer.android.com/tools/revisions/build-tools.html
-        buildToolsVersion = "30.0.2"
+        buildToolsVersion = '34.0.0'
 
         defaultConfig {
             applicationId = "com.philolog.hoplitekeyboard"
             minSdkVersion 21
-            targetSdkVersion 30
+            targetSdkVersion 34
 
             ndk {
                 abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64" //, "mips64", "armeabi", "mips"
@@ -101,6 +101,15 @@ apply plugin: 'com.android.application'
                 path "CMakeLists.txt"
             }
         }
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
+        dependenciesInfo {
+            includeInApk true
+            includeInBundle true
+        }
+        ndkVersion '26.0.10792818'
     }
 
 allprojects {
