--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.philolog.hoplitekeyboard"
-    android:versionCode="30"
-    android:versionName="1.5.5">
+    android:versionCode="31"
+    android:versionName="1.6.0">
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <application
@@ -12,6 +12,7 @@
         android:allowBackup="true">
 
         <activity android:name=".HKMainMenu"
+            android:exported="true"
             android:label="Hoplite Keyboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -24,6 +25,7 @@
         <activity android:name=".HKTestAppMainActivity" android:label="Hoplite Keyboard Testing"/>
 
         <service android:name="com.philolog.hoplitekeyboard.HopliteKeyboard"
+            android:exported="true"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_INPUT_METHOD">
             <meta-data android:name="android.view.im" android:resource="@xml/method"/>
@@ -31,7 +33,5 @@
                 <action android:name="android.view.InputMethod" />
             </intent-filter>
         </service>
-
     </application>
-
 </manifest>
