--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.2'
+        classpath 'com.android.tools.build:gradle:8.13.2'
         //classpath 'com.android.tools.build:gradle-experimental:0.11.0-alpha2'
         //classpath 'com.android.tools.build:gradle-experimental:0.11.0'
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.13'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.0'
         //classpath 'com.android.tools.build:gradle:1.12'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,8 +18,8 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
 }
 
