update Java version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,8 +107,8 @@ apply plugin: 'com.android.application'
             }
         }
         compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_8
-            targetCompatibility JavaVersion.VERSION_1_8
+            sourceCompatibility JavaVersion.VERSION_17
+            targetCompatibility JavaVersion.VERSION_17
         }
         dependenciesInfo {
             includeInApk true
